Fixed various cosmetic issues with avatars in the application.
Surevine bug tracker references:

CHAT-199 CHAT-200 CHAT-198 CHAT-195

 Please enter the commit message for your changes. Lines starting

--- a/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
+++ b/src/main/resources/com/google/gwt/i18n/client/LocalizableResource.properties
@@ -25,7 +25,7 @@ useYourBrowser=Use your browser''s copy command to place this text into the clip
 changeNickName=Change nickname
 changeBuddyNickname=Change buddy nickname
 changeNickNameMessage=Write the new nickname\:
-nickNameEmpty=Nick name can''t be empty
+nickNameEmpty=Nickname can''t be empty
 changeFromLabelText=Change from\:
 changeToLabelText=To\:
 
@@ -80,7 +80,7 @@ incommingAdminMessage=At group chat ''{0}'': {1}
 incommingMessage=At group chat ''{0}'', {1} says \u00AB{2}\u00BB
 invitePeopleToGroupChat=Invite more people to this group chat
 inviteToThisGroupChat=Invite to this group chat
-notValidGroupChatName=The group name has not valid characters
+notValidGroupChatName=The group name has invalid characters
 occupantHasJoined=''{0}'' has joined the conversation
 occupantHasLeft=''{0}'' has left the conversation
 occupantModified=Occupant ''{0}'' has been modified
