--- a/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_it.properties
+++ b/src/main/resources/com/google/gwt/i18n/client/LocalizableResource_it.properties
@@ -77,7 +77,7 @@ incommingAdminMessage=Alla chat di gruppo ''{0}''\: {1}
 incommingMessage=Alla chat di gruppo ''{0}'', {1} dice \u00AB{2}\u00BB
 invitePeopleToGroupChat=Invita altre persone a questa chat di gruppo
 inviteToThisGroupChat=Invita a questa chat di gruppo
-notValidGroupChatName=Il nome del gruppo ha caratteri non validi
+invalidGroupChatName=Il nome del gruppo ha caratteri non validi
 occupants={0} Presenti
 openNewGroupChat=Crea una nuova chat di gruppo
 openNewGroupChatAction=Crea chat di gruppo
